// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Result component should render correctly when the network condition is green 1`] = `
<ResultItem
  icon={<SuccessIcon />}
>
  Your network connection is stable
</ResultItem>
`;

exports[`the Result component should render correctly when the network condition is red 1`] = `
<ResultItem
  icon={<ErrorIcon />}
>
  Poor network conditions. You may experience poor call quality and reliability.
</ResultItem>
`;

exports[`the Result component should render correctly when the network condition is yellow 1`] = `
<ResultItem
  icon={<WarningIcon />}
>
  Poor network conditions. You may experience degraded video performance.
</ResultItem>
`;

exports[`the Result component should render correctly when there is an error 1`] = `
<ResultItem
  icon={<ErrorIcon />}
>
  There was a problem connecting to the network
</ResultItem>
`;
